--- a/style.css
+++ b/style.css
@@ -199,6 +199,7 @@ span {
 /* Online game Seciton */
 .online-game-container {
   margin-top: 100px;
+  width: 100%;
 }
 .game-details {
   text-align: center;
@@ -304,6 +305,38 @@ span {
 }
 
 /* link Section */
+.link-container{
+  min-height: 200px;
+  margin-top: 150px;
+  display: flex;
+  text-align: center;
+  background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+  padding: 80px;
+  max-width: 1440px;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  
+}
+.single-link{
+flex-basis: 300px;
+display: flex;
+align-items: center;
+gap : 15px;
+}
+.link-btn{
+ background: rgb(255, 254, 254);
+ border-radius: 50px;
+ padding: 10px;
+ border: none;
+}
 
+.link-btn:hover{
+  border-color: #f948b2;
+  color: #f948b2;
+  border: 5px solid #f948b2;
+  cursor: pointer;
+  transition: 0.2s;
+}
 
 
