--- a/responsive.css
+++ b/responsive.css
@@ -58,21 +58,19 @@
 .online-game-container, .card-items{
     flex-direction: column;
     align-items: center;
-    width: 100%;
+
 }
 
 .online-game-container, .card-items, .play_container {
-    grid-template-columns: repeat(1, 1fe);
-}
+    grid-template-columns: 1fr;
+    }
 .container, .play_container {
-    width: 347px;
+    width: 425px;
     margin: auto;
 }
 .grid-container {
-    
-    grid-template-columns: 1fr;
-   
-  }
+        grid-template-columns: 1fr;
+     }
   .play-details{
     display: flex;
     flex-direction: column;
@@ -81,7 +79,7 @@
   .link-container{
     justify-content: center;
   }
-  .container,  {
+  .container  {
     width: 100%;
     margin-top: 150px;
 }
@@ -105,7 +103,7 @@
         grid-template-columns: repeat(2, 1fr);
     }
     .play-img-items img{
-        .play-img-items img{
+       
             width: 100%;
             height: 100%;
           }
@@ -122,8 +120,8 @@
         top: 55%;
         left: -153px;
       }
-      .container, .play_container {
+      /* .container, .play_container {
         width: 580px;
         margin-top: 150px;
-    }
+    } */
 }
