--- a/style.css
+++ b/style.css
@@ -199,7 +199,8 @@ span {
 /* Online game Seciton */
 .online-game-container {
   margin-top: 100px;
-  width: 100%;
+
+  
 }
 .game-details {
   text-align: center;
@@ -212,7 +213,7 @@ span {
 .the-cards {
   /* position: relative; */
   display: block;
-  width: 100%;
+ 
   height: auto;
 }
 
@@ -273,6 +274,10 @@ span {
   min-height: 500px;
   grid-template-columns: repeat(4, 1fr);
   gap: 15px;
+}
+.online-game-container {
+  margin-top: 100px;
+  
 }
 
 
@@ -339,4 +344,59 @@ gap : 15px;
   transition: 0.2s;
 }
 
+/* footer section */
+.footer-container {
+  background: #0B0223;
+  width: 100%;
+  
+}
+.logo-container{
+  padding-top: 130px;
+}
+.footer-logo{
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  
+}
+.footer-logo p{
+  color: white;
+}
+.importent-links {
+  color: whitesmoke ;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-top: 50px;
+  gap: 50px;
+}
+.socil-icons{
+  color: whitesmoke ;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-top: 50px;
+  gap: 50px;
+}
+.socil-icons a {
+  font-size: 5rem;
+  color: #fff;
 
+}
+.socil-icons a:hover{
+  color: #f948b2;
+  cursor: pointer;
+}
+.official-links, .copyright-section{
+  color: rgba(255, 255, 255, 0.60);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-top: 50px;
+  gap: 50px;
+}
