--- a/style.css
+++ b/style.css
@@ -349,9 +349,11 @@ gap : 15px;
   background: #0B0223;
   width: 100%;
   
+  
 }
 .logo-container{
   padding-top: 130px;
+  
 }
 .footer-logo{
   display: flex;
@@ -372,6 +374,7 @@ gap : 15px;
   text-align: center;
   margin-top: 50px;
   gap: 50px;
+  cursor: pointer;
 }
 .socil-icons{
   color: whitesmoke ;
@@ -399,4 +402,5 @@ gap : 15px;
   text-align: center;
   margin-top: 50px;
   gap: 50px;
+  cursor: pointer;
 }
